Fixed picture alignment

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,9 @@ p {
 img {
     width:432px;
     height:540px; 
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     border:2px solid aliceblue;
 }
 
